--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.scroll-hide::-webkit-scrollbar{
+  display: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
